update statut contact
